@@ -37,9 +37,6 @@ public class Message implements Recyclable {
     private String queueName;
 
     @Nullable
-    private String topicName;
-
-    @Nullable
     private String body;
 
     /**
@@ -60,16 +57,6 @@ public class Message implements Recyclable {
 
     public Message withQueue(String queueName) {
         this.queueName = queueName;
-        return this;
-    }
-
-    @Nullable
-    public String getTopicName() {
-        return topicName;
-    }
-
-    public Message withTopic(String topicName) {
-        this.topicName = topicName;
         return this;
     }
 
@@ -106,13 +93,12 @@ public class Message implements Recyclable {
     }
 
     public boolean hasContent() {
-        return queueName != null || topicName != null || body != null || headers.size() > 0;
+        return queueName != null || body != null || headers.size() > 0;
     }
 
     @Override
     public void resetState() {
         queueName = null;
-        topicName = null;
         body = null;
         headers.resetState();
         age = -1L;
@@ -120,7 +106,6 @@ public class Message implements Recyclable {
 
     public void copyFrom(Message other) {
         this.queueName = other.getQueueName();
-        this.topicName = other.getTopicName();
         this.body = other.body;
         this.headers.copyFrom(other.getHeaders());
         this.age = other.getAge();
